<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/socialMediaGrey"
    tools:context=".EMI_Page">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mortgageAmountInputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:hint="@string/MortgageAmountHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/MortgageAmountHint"
            android:inputType="numberDecimal"
            android:maxLength="9"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amortizationPeriodInputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/AmortizationPeriodHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mortgageAmountInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/AmortizationPeriodHint"
            android:inputType="number"
            android:maxLength="3"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/interestRateInputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:hint="@string/interestRateHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amortizationPeriodInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/interestRateHint"
            android:inputType="numberDecimal"
            android:maxLength="4"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </RelativeLayout>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_calculate"
        android:layout_width="127dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/smoothBlue"
        android:onClick="makeCalculations"
        android:text="@string/calculateButtonText"
        android:textSize="15sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interestRateInputLayout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="199dp"
        android:layout_height="89dp"
        android:layout_marginTop="16dp"
        android:text="@string/EMICalculatorHeader"
        android:textAlignment="center"
        android:textSize="34sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>